<resources>
    <string name="app_name">LoBa</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_splash_screen">LoBa</string>
    
    <string name="name_title">Name</string>
    <string name="username_title">Username</string>
    <string name="password_title">Password</string>
    <string name="create_password_title">Create Password</string>
    <string name="confirm_password_title">Confirm Password</string>
    <string name="state_title">State</string>
    <string name="city_title">City</string>

    <string name="login_button_title">Login</string>
    <string name="register_link_title">Register Here</string>
    <string name="logout_title">Log Out</string>
    <string name="go_back_title">Back</string>
    <string name="add_bar_special_title">Add Special</string>
    <string name="specials_title">SPECIALS</string>

    <string name="register_button">Register</string>
    
    <string name="add_special_main_title">Add Your Special</string>
    <string name="add_special_date_title">Date: </string>
    <string name="add_special_description_title">Description: </string>
    <string name="add_special_button_title">Submit Special</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_single_bar_details">SingleBarDetailsActivity</string>
    <string name="title_activity_add_bar_special">AddBarSpecial</string>

</resources>
