<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="rpeck.loba_login_register.AddBarSpecial"
                android:background="@drawable/lobabackground"
                android:orientation="vertical">

    <ImageView
        android:src="@drawable/lobaheader"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="-38dp"
        android:layout_marginBottom="-20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:listSeparatorTextViewStyle"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="-10dp">

        <TextView
            android:id="@+id/add_special_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/single_bar_text_color"
            android:layout_marginTop="5dp"
            android:paddingBottom="10dp"/>


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/add_special_main_title"
        android:gravity="center"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@color/single_bar_text_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="35dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_special_date_title"
                android:textSize="20dp"
                android:layout_weight=".6"
                android:textColor="@color/single_bar_text_color"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/add_special_date_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".4">

            </Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="35dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_special_description_title"
                android:textSize="20dp"
                android:textColor="@color/single_bar_text_color"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/add_special_description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/single_bar_text_color"
                android:hint="Enter Description Here"
                android:layout_marginLeft="30dp"/>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black"
            android:layout_marginRight="90dp"
            android:layout_marginLeft="90dp"
            android:textColor="@color/single_bar_text_color"/>

        <TextView
            android:id="@+id/add_special_submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_special_button_title"
            android:gravity="center"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/single_bar_text_color"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black"
            android:layout_marginRight="90dp"
            android:layout_marginLeft="90dp"/>

    </LinearLayout>

</LinearLayout>
